version/0.21/_sources/api/solver/_autosummary/settings/momentum_6.rst.txt
:orphan:

.. _momentum_6:

momentum
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.momentum_6.momentum
    :show-inheritance:

.. rubric:: Attributes

==========================================================================   =====================================================================

Attribute                                                                                                                                  Summary

==========================================================================   =====================================================================
:ref:`system_coupling <system_coupling_1>`                                                                                       System Coupling?.

:ref:`backflow_reference_frame <backflow_reference_frame>`                                                               Backflow Reference Frame.

:ref:`pressure_spec <pressure_spec>`                                                                         Select pressure specification method.

:ref:`pressure_spec_method <pressure_spec_method>`                                                           Select pressure specification method.

:ref:`gauge_pressure <gauge_pressure>`                                                                                     Specify Gauge Pressure.

:ref:`pressure_profile_multiplier <pressure_profile_multiplier>`                                                      Pressure Profile Multiplier.

:ref:`backflow_dir_spec_method <backflow_dir_spec_method>`                                         Select Backflow Direction Specification Method.

:ref:`coordinate_system <coordinate_system>`                                                                             Select Coordinate System.

:ref:`flow_direction <flow_direction>`                                                                              Set flow direction components.

:ref:`backflow_pressure_spec <backflow_pressure_spec>`                                                     Select Backflow Pressure Specification.

:ref:`backflow_pressure_specification <backflow_pressure_specification>`                                   Select Backflow Pressure Specification.

:ref:`axis_direction <axis_direction_2>`                                                                            Set axis direction components.

:ref:`axis_origin <axis_origin_2>`                                                                                     Set axis origin components.

:ref:`prevent_reverse_flow <prevent_reverse_flow>`                               Enable/disable to Build artificial walls to prevent reverse flow.

:ref:`radial_equ_pressure_distribution <radial_equ_pressure_distribution>`                 Enable/disable Rdial Equilibrium Pressure Distribution.

:ref:`avg_pressure_spec <avg_pressure_spec>`                                                            Set Average Pressure Specification on/off.

:ref:`avg_method <avg_method>`                                                                                            Select Averaging Method.

:ref:`target_mass_flow_rate <target_mass_flow_rate>`                                                              Specify targeted mass flow rate.

:ref:`target_mass_flow <target_mass_flow>`                                                                               Specify Target Mass Flow.

:ref:`upper_limit_of_abs_pressure <upper_limit_of_abs_pressure>`                                         Specify Upper Limit of Absolute Pressure.

:ref:`lower_limit_of_abs_pressure <lower_limit_of_abs_pressure>`                                         Specify Lower Limit of Absolute Pressure.

:ref:`acoustic_wave_model <acoustic_wave_model>`                                                                       Select acoustic wave model.

:ref:`exit_pressure_spec <exit_pressure_spec>`                                                                 Select exit pressure specification.

:ref:`impedance_zero_order_term <impedance_zero_order_term>`                                                    Specify impedance zero order term.

:ref:`real_pole_series <real_pole_series>`                                                                               List of Real Pole Series.

:ref:`complex_pole_series <complex_pole_series>`                                                                      List of Complex Pole Series.

:ref:`incoming_wave <incoming_wave>`                                                                                        Specify incoming wave.

:ref:`loss_coefficient <loss_coefficient>`                                                                                       Loss Coefficient.

:ref:`strength <strength>`                                                                                                               Strength.

==========================================================================   =====================================================================

.. rubric:: Included in:

============================================   =======================================

Parent                                                                         Summary

============================================   =======================================
:ref:`outlet_vent_child <outlet_vent_child>`       'child_object_type' of outlet_vent.

:ref:`phase_child <phase_child_16>`                      'child_object_type' of phase.

:ref:`phase_child <phase_child_44>`                      'child_object_type' of phase.

============================================   =======================================

